--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 
     <div class="navigator-bar" id="navigator-bar">
         <div class="navigator-bar-box">
-            <div class="navigator-bar-item" data-nav="section-1">合作课程简介</div>
-            <div class="navigator-bar-item" data-nav="section-2">观看课程</div>
-            <div class="navigator-bar-item" data-nav="section-3">授课老师</div>
-            <div class="navigator-bar-item" data-nav="section-4">DragonBoard™ 410c</div>
-            <div class="navigator-bar-item" data-nav="section-5">关于 Qualcomm</div>
+            <div class="navigator-bar-item" data-nav="intro-section">合作课程简介</div>
+            <div class="navigator-bar-item" data-nav="onlineCouse-section">观看课程</div>
+            <div class="navigator-bar-item" data-nav="teachers-section">授课老师</div>
+            <div class="navigator-bar-item" data-nav="products-section">DragonBoard™ 410c</div>
+            <div class="navigator-bar-item" data-nav="qualcomm-section">关于 Qualcomm</div>
         </div>
     </div>
 
     <div class="page-content">
-        <div class="intro-section" id="section-1">
+        <div class="intro-section" id="intro-section">
             <div class="intro-icon">
                 <img src="images/title(1).png" alt="">
             </div>
@@ -44,7 +44,7 @@
                 410c的开发环境。</div>
         </div>
 
-        <div class="onlineCouse-section" id="section-2">
+        <div class="onlineCouse-section" id="onlineCouse-section">
             <div class="course-icon">
                 <img src="images/title(2).png" alt="">
             </div>
@@ -221,7 +221,7 @@
             </div>
         </div>
 
-        <div class="teachers-section" id="section-3">
+        <div class="teachers-section" id="teachers-section">
             <div class="teachers-icon">
                 <img src="images/sub-title-teacher.jpg" alt="">
             </div>
@@ -282,7 +282,7 @@
 
 
 
-        <div class="products-section" id="section-4">
+        <div class="products-section" id="products-section">
             <div class="products-icon">
                 <img src="images/sub-title-410.png" alt="">
             </div>
@@ -320,7 +320,7 @@
             </div>
             <div class="border-line second"></div>
         </div>
-        <div class="qualcomm-section" id="section-5">
+        <div class="qualcomm-section" id="qualcomm-section">
             <div class="qualcomm-title">
                 <img src="images/about_title.jpg" alt="">
             </div>
